# rcrpc

./: .gitignore  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
src/: Makefile.am  protocol.xml
src/rcrpc/: Makefile.am  audio.c  backlight.c  handset.c  io.c  irq.c  lldp.c  media-player.c  media.c  mixer.c  modem.c  net.c  rcrpc.c  rcrpc.h  rcrpc.pc.in  remote-control-rpc.h  smartcard.c  sound.c  system.c  task-manager.c  tuner.c  voip.c
src/rcrpc-client/: Makefile.am  audio.c  backlight.c  card.c  events.c  gpio.c  handset.c  irq.c  lldp.c  media-player.c  mixer.c  modem.c  rcrpc-client.c  rcrpc-client.h  rcrpc-client.pc.in  sound-manager.c  task-manager.c  tuner.c  voip.c
tests/: Makefile.am  media-player-test.c
